// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Shareable Workpad API Placed successfully with default properties 1`] = `
<div
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with default properties 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 768px; width: 1080px;"
  >
    <div
      class="container"
      style="height: 720px; width: 1080px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(1, 1, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bar"
        style="bottom: 0px;"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem title emotion-euiFlexItem-grow-1"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="flex-shrink: 0;"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  href="https://www.elastic.co"
                  rel="noreferrer"
                  title="Powered by Elastic.co"
                >
                  <span
                    data-euiicon-type="logoElastic"
                  />
                </a>
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="min-width: 0; cursor: default;"
              >
                <div
                  class="euiText emotion-euiText-s-euiTextColor-ghost"
                >
                  <div
                    class="eui-textTruncate"
                  >
                    My Canvas Workpad
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
                style="margin: 0px 12px;"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Previous Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsPrevPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowLeft"
                    />
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--small css-14l66eu-empty-text"
                    data-test-subj="pageControlsCurrentPage"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        <div
                          class="euiText emotion-euiText-s-euiTextColor-customColor"
                        >
                          Page 1
                        </div>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Next Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsNextPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowRight"
                    />
                  </button>
                </div>
              </div>
              <div
                class="euiFlexGroup emotion-euiFlexGroup-none-center-flexEnd-column"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <div
                    class="euiPopover emotion-euiPopover"
                    id="settings"
                  >
                    <div
                      class="euiPopover__anchor css-16vtueo-render"
                    >
                      <button
                        aria-label="Settings"
                        class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="gear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with height specified 1`] = `
<div
  kbn-canvas-height="350"
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with height specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 398px; width: 525px;"
  >
    <div
      class="container"
      style="height: 350px; width: 525px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(0.48611111111111116, 0.4861111111111111, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bar"
        style="bottom: 0px;"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem title emotion-euiFlexItem-grow-1"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="flex-shrink: 0;"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  href="https://www.elastic.co"
                  rel="noreferrer"
                  title="Powered by Elastic.co"
                >
                  <span
                    data-euiicon-type="logoElastic"
                  />
                </a>
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="min-width: 0; cursor: default;"
              >
                <div
                  class="euiText emotion-euiText-s-euiTextColor-ghost"
                >
                  <div
                    class="eui-textTruncate"
                  >
                    My Canvas Workpad
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
                style="margin: 0px 12px;"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Previous Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsPrevPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowLeft"
                    />
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--small css-14l66eu-empty-text"
                    data-test-subj="pageControlsCurrentPage"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        <div
                          class="euiText emotion-euiText-s-euiTextColor-customColor"
                        >
                          Page 1
                        </div>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Next Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsNextPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowRight"
                    />
                  </button>
                </div>
              </div>
              <div
                class="euiFlexGroup emotion-euiFlexGroup-none-center-flexEnd-column"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <div
                    class="euiPopover emotion-euiPopover"
                    id="settings"
                  >
                    <div
                      class="euiPopover__anchor css-16vtueo-render"
                    >
                      <button
                        aria-label="Settings"
                        class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="gear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with page specified 1`] = `
<div
  kbn-canvas-page="0"
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with page specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 768px; width: 1080px;"
  >
    <div
      class="container"
      style="height: 720px; width: 1080px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(1, 1, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bar"
        style="bottom: 0px;"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem title emotion-euiFlexItem-grow-1"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="flex-shrink: 0;"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  href="https://www.elastic.co"
                  rel="noreferrer"
                  title="Powered by Elastic.co"
                >
                  <span
                    data-euiicon-type="logoElastic"
                  />
                </a>
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="min-width: 0; cursor: default;"
              >
                <div
                  class="euiText emotion-euiText-s-euiTextColor-ghost"
                >
                  <div
                    class="eui-textTruncate"
                  >
                    My Canvas Workpad
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
                style="margin: 0px 12px;"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Previous Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsPrevPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowLeft"
                    />
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--small css-14l66eu-empty-text"
                    data-test-subj="pageControlsCurrentPage"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        <div
                          class="euiText emotion-euiText-s-euiTextColor-customColor"
                        >
                          Page 1
                        </div>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Next Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsNextPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowRight"
                    />
                  </button>
                </div>
              </div>
              <div
                class="euiFlexGroup emotion-euiFlexGroup-none-center-flexEnd-column"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <div
                    class="euiPopover emotion-euiPopover"
                    id="settings"
                  >
                    <div
                      class="euiPopover__anchor css-16vtueo-render"
                    >
                      <button
                        aria-label="Settings"
                        class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="gear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width and height specified 1`] = `
<div
  kbn-canvas-height="350"
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
  kbn-canvas-width="350"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width and height specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 398px; width: 350px;"
  >
    <div
      class="container"
      style="height: 350px; width: 350px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(0.32407407407407407, 0.32407407407407407, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bar"
        style="bottom: 0px;"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem title emotion-euiFlexItem-grow-1"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="flex-shrink: 0;"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  href="https://www.elastic.co"
                  rel="noreferrer"
                  title="Powered by Elastic.co"
                >
                  <span
                    data-euiicon-type="logoElastic"
                  />
                </a>
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="min-width: 0; cursor: default;"
              >
                <div
                  class="euiText emotion-euiText-s-euiTextColor-ghost"
                >
                  <div
                    class="eui-textTruncate"
                  >
                    My Canvas Workpad
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
                style="margin: 0px 12px;"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Previous Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsPrevPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowLeft"
                    />
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--small css-14l66eu-empty-text"
                    data-test-subj="pageControlsCurrentPage"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        <div
                          class="euiText emotion-euiText-s-euiTextColor-customColor"
                        >
                          Page 1
                        </div>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Next Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsNextPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowRight"
                    />
                  </button>
                </div>
              </div>
              <div
                class="euiFlexGroup emotion-euiFlexGroup-none-center-flexEnd-column"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <div
                    class="euiPopover emotion-euiPopover"
                    id="settings"
                  >
                    <div
                      class="euiPopover__anchor css-16vtueo-render"
                    >
                      <button
                        aria-label="Settings"
                        class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="gear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width specified 1`] = `
<div
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
  kbn-canvas-width="400"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 315px; width: 400px;"
  >
    <div
      class="container"
      style="height: 267px; width: 400px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(0.37037037037037035, 0.37037037037037035, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bar"
        style="bottom: 0px;"
      >
        <div
          class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-stretch-row"
        >
          <div
            class="euiFlexItem title emotion-euiFlexItem-grow-1"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="flex-shrink: 0;"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  href="https://www.elastic.co"
                  rel="noreferrer"
                  title="Powered by Elastic.co"
                >
                  <span
                    data-euiicon-type="logoElastic"
                  />
                </a>
              </div>
              <div
                class="euiFlexItem emotion-euiFlexItem-growZero"
                style="min-width: 0; cursor: default;"
              >
                <div
                  class="euiText emotion-euiText-s-euiTextColor-ghost"
                >
                  <div
                    class="eui-textTruncate"
                  >
                    My Canvas Workpad
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="euiFlexItem emotion-euiFlexItem-growZero"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-stretch-row"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
                style="margin: 0px 12px;"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Previous Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsPrevPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowLeft"
                    />
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    class="euiButtonEmpty euiButtonEmpty--small css-14l66eu-empty-text"
                    data-test-subj="pageControlsCurrentPage"
                    type="button"
                  >
                    <span
                      class="euiButtonContent euiButtonEmpty__content"
                    >
                      <span
                        class="euiButtonEmpty__text"
                      >
                        <div
                          class="euiText emotion-euiText-s-euiTextColor-customColor"
                        >
                          Page 1
                        </div>
                      </span>
                    </span>
                  </button>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Next Page"
                    class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-disabled-hoverStyles"
                    data-test-subj="pageControlsNextPage"
                    disabled=""
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="arrowRight"
                    />
                  </button>
                </div>
              </div>
              <div
                class="euiFlexGroup emotion-euiFlexGroup-none-center-flexEnd-column"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <div
                    class="euiPopover emotion-euiPopover"
                    id="settings"
                  >
                    <div
                      class="euiPopover__anchor css-16vtueo-render"
                    >
                      <button
                        aria-label="Settings"
                        class="euiButtonIcon euiButtonIcon--xSmall emotion-euiButtonIcon-empty-text-hoverStyles"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="gear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
